rust/cube/cubeplanner/tests/snapshots/member_expressions__a_dimension_expression_is_planned_as_written.snap
---
source: cubeplanner/tests/member_expressions.rs
expression: planned.sql
---
SELECT UPPER("orders".status) "upper_status", count("orders".id) "orders__count" 
FROM  (SELECT * FROM public.orders WHERE 1 = 1 AND 1 = 1
)  AS "orders"
GROUP BY 1
ORDER BY  2  DESC
