rust/cube/cubeplanner/tests/snapshots/member_expressions__a_measure_expression_is_planned_as_written.snap
---
source: cubeplanner/tests/member_expressions.rs
expression: planned.sql
---
SELECT "orders".status "orders__status", sum("orders".amount) * 2 "double_amount" 
FROM  (SELECT * FROM public.orders WHERE 1 = 1 AND 1 = 1
)  AS "orders"
GROUP BY 1
ORDER BY  2  DESC
