rust/cube/cubeplanner/tests/snapshots/member_expressions__a_patch_measure_expression_pushes_its_filters_into_the_aggregation.snap
---
source: cubeplanner/tests/member_expressions.rs
expression: planned.sql
---
SELECT sum(CASE WHEN ("orders".status = 'shipped') THEN "orders".amount END) "shipped_amount" 
FROM  (SELECT * FROM public.orders WHERE 1 = 1 AND 1 = 1
)  AS "orders"
