rust/cube/cubeplanner/tests/snapshots/member_expressions__a_segment_expression_becomes_a_predicate.snap
---
source: cubeplanner/tests/member_expressions.rs
expression: planned.sql
---
SELECT count("orders".id) "orders__count" 
FROM  (SELECT * FROM public.orders WHERE 1 = 1 AND 1 = 1
)  AS "orders"
WHERE ("orders".id > 100)
